fix NPE of ktorm